build: 将项目升级到 Java 8
- 修改所有模块的 parent 依赖为 parent8
- 更新 artifactId 以适配 Java 8 版本
- 调整 maven.compiler.source 和 maven.compiler.target 为 8
- 优化部分代码以适应 Java 8